# WhatMob

./: CMakeLists.txt  Connection.cpp  Connection.h  DeviceData.cpp  DeviceData.h  HttpHeader.h  HttpRequest.h  HttpRequestParser.cpp  HttpRequestParser.h  HttpResponse.cpp  HttpResponse.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  Trie.cpp  Trie.h  main.cpp
client/php/: WhatmobDevice.class.php  WhatmobServer.class.php  WhatmobServerException.class.php  config.inc.php  example.php
